[gd_scene load_steps=2 format=3 uid="uid://bko4wd0mdgil0"]

[ext_resource type="Script" uid="uid://bjcuo3lln3dah" path="res://src/scenes/UI/GameUI/LoseScreen/LoseScreen.gd" id="1_tlxpv"]

[node name="LoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlxpv")

[node name="Modal" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.45
anchor_right = 0.7
anchor_bottom = 0.55
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Modal/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 20.0
offset_right = 96.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Balance was Delivered!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60
alignment = 1

[node name="RestartButton" type="Button" parent="Modal/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Restart "

[node name="MainMenuButton" type="Button" parent="Modal/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Main Menu"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Modal/Panel/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Modal/Panel/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
